Add Vercel URL to CORS config